--- a/style.css
+++ b/style.css
@@ -125,14 +125,14 @@ button:active {
   color: rgba(255, 0, 0);
 }
 
-#calendar .cells>div:nth-of-type(7n) {
+#calendar .cells>div:not(.holiday):nth-of-type(7n) {
   background-color: rgba(0, 0, 255, 0.1);
 }
 
-#calendar .cells.days>div:nth-of-type(7n) {
+#calendar .cells.days>div:not(.holiday):nth-of-type(7n) {
   color: rgba(0, 0, 255, 0.5);
 }
 
-#calendar .cells.daynames>div:nth-of-type(7n) {
+#calendar .cells.daynames>div:not(.holiday):nth-of-type(7n) {
   color: rgba(0, 0, 255);
 }
